--- a/lifehub-backend/src/main/resources/application.properties
+++ b/lifehub-backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5433/lifehub
+spring.datasource.username=postgres
+spring.datasource.password=Fs256811
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
 
