--- a/lifehub-backend/src/main/resources/application.properties
+++ b/lifehub-backend/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.password=Fs256811
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+springdoc.swagger-ui.defaultModelsExpandDepth=-1
 
