--- a/lifehub-backend/src/main/resources/application.properties
+++ b/lifehub-backend/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=Fs256811
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+logging.level.root=info
 springdoc.swagger-ui.defaultModelsExpandDepth=-1
 
-
+api.security.token.secret=${JWT_SECRET:my-secret-key}
